// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Should render correctly with divider 1`] = `
<div
  className="makeStyles-root-1"
>
  <CssBaseline />
  <WithStyles(ForwardRef(AppBar))
    className="makeStyles-appBar-3"
    position="fixed"
  >
    <WithStyles(ForwardRef(Toolbar))>
      <WithStyles(ForwardRef(IconButton))
        aria-label="open drawer"
        className="makeStyles-menuButton-4"
        color="inherit"
        edge="start"
        onClick={[Function]}
      >
        <MenuIcon />
      </WithStyles(ForwardRef(IconButton))>
      <WithStyles(ForwardRef(Typography))
        noWrap={true}
        variant="h6"
      >
        Title
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Toolbar))>
  </WithStyles(ForwardRef(AppBar))>
  <nav
    className="makeStyles-drawer-2"
  >
    <Hidden
      implementation="js"
      smUp={true}
    >
      <WithStyles(ForwardRef(Drawer))
        ModalProps={
          Object {
            "keepMounted": true,
          }
        }
        anchor="left"
        classes={
          Object {
            "paper": "makeStyles-drawerPaper-6",
          }
        }
        onClose={[Function]}
        open={false}
        variant="temporary"
      >
        <div>
          <div
            className="makeStyles-toolbar-5"
          />
          <WithStyles(ForwardRef(Divider)) />
          <div
            key="/Home/timelineTimeline/sentiment-analasisSentiment Analysis/topic-modelingTopic Modeling/latent-associationLatent Association"
          >
            <WithStyles(ForwardRef(Divider)) />
            <WithStyles(ForwardRef(List))>
              <Link
                className="makeStyles-link-8"
                key="/Home"
                to="/"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Home"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Home"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
              <Link
                className="makeStyles-link-8"
                key="/timelineTimeline"
                to="/timeline"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Timeline"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Timeline"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
              <Link
                className="makeStyles-link-8"
                key="/sentiment-analasisSentiment Analysis"
                to="/sentiment-analasis"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Sentiment Analysis"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Sentiment Analysis"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
              <Link
                className="makeStyles-link-8"
                key="/topic-modelingTopic Modeling"
                to="/topic-modeling"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Topic Modeling"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Topic Modeling"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
              <Link
                className="makeStyles-link-8"
                key="/latent-associationLatent Association"
                to="/latent-association"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Latent Association"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Latent Association"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
            </WithStyles(ForwardRef(List))>
          </div>
          <div
            key="/aboutAbout/docsDocs/paperPaper"
          >
            <WithStyles(ForwardRef(Divider)) />
            <WithStyles(ForwardRef(List))>
              <Link
                className="makeStyles-link-8"
                key="/aboutAbout"
                to="/about"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="About"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="About"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
              <Link
                className="makeStyles-link-8"
                key="/docsDocs"
                to="/docs"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Docs"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Docs"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
              <Link
                className="makeStyles-link-8"
                key="/paperPaper"
                to="/paper"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Paper"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Paper"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
            </WithStyles(ForwardRef(List))>
          </div>
        </div>
      </WithStyles(ForwardRef(Drawer))>
    </Hidden>
    <Hidden
      implementation="js"
      xsDown={true}
    >
      <WithStyles(ForwardRef(Drawer))
        classes={
          Object {
            "paper": "makeStyles-drawerPaper-6",
          }
        }
        open={true}
        variant="permanent"
      >
        <div>
          <div
            className="makeStyles-toolbar-5"
          />
          <WithStyles(ForwardRef(Divider)) />
          <div
            key="/Home/timelineTimeline/sentiment-analasisSentiment Analysis/topic-modelingTopic Modeling/latent-associationLatent Association"
          >
            <WithStyles(ForwardRef(Divider)) />
            <WithStyles(ForwardRef(List))>
              <Link
                className="makeStyles-link-8"
                key="/Home"
                to="/"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Home"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Home"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
              <Link
                className="makeStyles-link-8"
                key="/timelineTimeline"
                to="/timeline"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Timeline"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Timeline"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
              <Link
                className="makeStyles-link-8"
                key="/sentiment-analasisSentiment Analysis"
                to="/sentiment-analasis"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Sentiment Analysis"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Sentiment Analysis"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
              <Link
                className="makeStyles-link-8"
                key="/topic-modelingTopic Modeling"
                to="/topic-modeling"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Topic Modeling"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Topic Modeling"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
              <Link
                className="makeStyles-link-8"
                key="/latent-associationLatent Association"
                to="/latent-association"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Latent Association"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Latent Association"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
            </WithStyles(ForwardRef(List))>
          </div>
          <div
            key="/aboutAbout/docsDocs/paperPaper"
          >
            <WithStyles(ForwardRef(Divider)) />
            <WithStyles(ForwardRef(List))>
              <Link
                className="makeStyles-link-8"
                key="/aboutAbout"
                to="/about"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="About"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="About"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
              <Link
                className="makeStyles-link-8"
                key="/docsDocs"
                to="/docs"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Docs"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Docs"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
              <Link
                className="makeStyles-link-8"
                key="/paperPaper"
                to="/paper"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Paper"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Paper"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
            </WithStyles(ForwardRef(List))>
          </div>
        </div>
      </WithStyles(ForwardRef(Drawer))>
    </Hidden>
  </nav>
  <main
    className="makeStyles-content-7"
  >
    <div
      className="makeStyles-toolbar-5"
    />
  </main>
</div>
`;

exports[`Nav Should render correctly without divider 1`] = `
<div
  className="makeStyles-root-1"
>
  <CssBaseline />
  <WithStyles(ForwardRef(AppBar))
    className="makeStyles-appBar-3"
    position="fixed"
  >
    <WithStyles(ForwardRef(Toolbar))>
      <WithStyles(ForwardRef(IconButton))
        aria-label="open drawer"
        className="makeStyles-menuButton-4"
        color="inherit"
        edge="start"
        onClick={[Function]}
      >
        <MenuIcon />
      </WithStyles(ForwardRef(IconButton))>
      <WithStyles(ForwardRef(Typography))
        noWrap={true}
        variant="h6"
      >
        Title
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Toolbar))>
  </WithStyles(ForwardRef(AppBar))>
  <nav
    className="makeStyles-drawer-2"
  >
    <Hidden
      implementation="js"
      smUp={true}
    >
      <WithStyles(ForwardRef(Drawer))
        ModalProps={
          Object {
            "keepMounted": true,
          }
        }
        anchor="left"
        classes={
          Object {
            "paper": "makeStyles-drawerPaper-6",
          }
        }
        onClose={[Function]}
        open={false}
        variant="temporary"
      >
        <div>
          <div
            className="makeStyles-toolbar-5"
          />
          <WithStyles(ForwardRef(Divider)) />
          <div
            key="/Home/timelineTimeline/sentiment-analasisSentiment Analysis/topic-modelingTopic Modeling/latent-associationLatent Association"
          >
            <WithStyles(ForwardRef(Divider)) />
            <WithStyles(ForwardRef(List))>
              <Link
                className="makeStyles-link-8"
                key="/Home"
                to="/"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Home"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Home"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
              <Link
                className="makeStyles-link-8"
                key="/timelineTimeline"
                to="/timeline"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Timeline"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Timeline"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
              <Link
                className="makeStyles-link-8"
                key="/sentiment-analasisSentiment Analysis"
                to="/sentiment-analasis"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Sentiment Analysis"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Sentiment Analysis"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
              <Link
                className="makeStyles-link-8"
                key="/topic-modelingTopic Modeling"
                to="/topic-modeling"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Topic Modeling"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Topic Modeling"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
              <Link
                className="makeStyles-link-8"
                key="/latent-associationLatent Association"
                to="/latent-association"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Latent Association"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Latent Association"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
            </WithStyles(ForwardRef(List))>
          </div>
        </div>
      </WithStyles(ForwardRef(Drawer))>
    </Hidden>
    <Hidden
      implementation="js"
      xsDown={true}
    >
      <WithStyles(ForwardRef(Drawer))
        classes={
          Object {
            "paper": "makeStyles-drawerPaper-6",
          }
        }
        open={true}
        variant="permanent"
      >
        <div>
          <div
            className="makeStyles-toolbar-5"
          />
          <WithStyles(ForwardRef(Divider)) />
          <div
            key="/Home/timelineTimeline/sentiment-analasisSentiment Analysis/topic-modelingTopic Modeling/latent-associationLatent Association"
          >
            <WithStyles(ForwardRef(Divider)) />
            <WithStyles(ForwardRef(List))>
              <Link
                className="makeStyles-link-8"
                key="/Home"
                to="/"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Home"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Home"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
              <Link
                className="makeStyles-link-8"
                key="/timelineTimeline"
                to="/timeline"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Timeline"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Timeline"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
              <Link
                className="makeStyles-link-8"
                key="/sentiment-analasisSentiment Analysis"
                to="/sentiment-analasis"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Sentiment Analysis"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Sentiment Analysis"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
              <Link
                className="makeStyles-link-8"
                key="/topic-modelingTopic Modeling"
                to="/topic-modeling"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Topic Modeling"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Topic Modeling"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
              <Link
                className="makeStyles-link-8"
                key="/latent-associationLatent Association"
                to="/latent-association"
              >
                <WithStyles(ForwardRef(ListItem))
                  button={true}
                  key="Latent Association"
                >
                  <WithStyles(ForwardRef(ListItemText))
                    primary="Latent Association"
                  />
                </WithStyles(ForwardRef(ListItem))>
              </Link>
            </WithStyles(ForwardRef(List))>
          </div>
        </div>
      </WithStyles(ForwardRef(Drawer))>
    </Hidden>
  </nav>
  <main
    className="makeStyles-content-7"
  >
    <div
      className="makeStyles-toolbar-5"
    />
  </main>
</div>
`;
